<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RGB controller</string>
    <string name="btn_close">Close</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_set">Set</string>
    <string name="btn_go_back">Go back</string>
    <string name="btn_used_libs">Used libs</string>
    <string name="btn_privacy">Privacy</string>
    <string name="btn_tos">Terms of Service</string>
    <string name="checkbox_animation">Animation</string>
    <string name="desc_app_icon">App icon</string>
    <string name="desc_power">Power</string>
    <string name="field_protocol">Protocol</string>
    <string name="field_hostname">Hostname/IP</string>
    <string name="field_port">Port</string>
    <string name="field_command_line">Command line</string>
    <string name="field_r">R</string>
    <string name="field_g">G</string>
    <string name="field_b">B</string>
    <string name="text_debug">[Debug]</string>
    <string name="text_help">Put here full path with params. &lt;br&gt;Example: &lt;font color="#0084ff"&gt;/script.py?red=&lt;/font&gt;&lt;font color="#990000"&gt;{_r}&lt;/font&gt;&lt;font color="#0084ff"&gt;&amp;green=&lt;/font&gt;&lt;font color="#009900"&gt;{_g}&lt;/font&gt;&lt;font color="#0084ff"&gt;&amp;blue=&lt;/font&gt;&lt;font color="#0c39c2"&gt;{_b}&lt;/font&gt;&lt;/font&gt;, where &lt;font color="#ff9900"&gt;{_color}&lt;/font&gt; is a required placeholder.</string>
    <string name="text_app_desc">Simple app to control your light IoT devices. This app requires compatible IoT Server to run. Features depends on your devices and may not work as well.</string>
    <string name="text_app_dev">Developer: AndraxDev (Teslasoft)</string>
    <string name="text_version">App version:</string>
    <string name="title_about">About app</string>
    <string name="title_help">Help</string>
    <string name="text_device_name">Device name</string>
    <string name="text_offline">Offline</string>
    <string name="text_edit">Edit</string>
    <string name="text_add_device">Add new device</string>
    <string name="title_devices">Devices</string>
    <string name="text_no_devices_selected">Please select a device from \'Devices\' tab</string>
    <string name="title_no_devices_selected">No devices selected</string>
    <string name="text_connecting">Connecting…</string>
    <string name="text_loading">Loading…</string>
    <string name="text_controller">Controller</string>
    <string name="text_edit_device_info">Edit device info</string>
    <string name="required_field">Please fill this blank!</string>
    <string name="invalid_value">Invalid value!</string>
    <string name="cmd_missing_params">CMD does not contain required params</string>
    <string name="widget_sync_title">Turn on sync</string>
    <string name="widget_sync_description">Sign in with Teslasoft ID</string>
    <string name="account_manager">Account manager</string>
    <string name="auth_failed">Failed to sign in.</string>
    <string name="device_add_failed">Failed to save device info</string>
    <string name="teslasoft_core">Teslasoft Core</string>
    <string name="teslasoft_core_error">This feature requires one or more Teslasoft services that are not currently available on your device.</string>
    <string name="title_used_libs">Used libs</string>
    <string name="no_devices_found">No devices found</string>
    <string name="your_smart_devices_will_appear_here">Your smart devices will appear here</string>
</resources>
