<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/action_buttons_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_version">

        <Button
            android:id="@+id/btn_used_libs"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn_accent_outline"
            android:onClick="open_used_libs"
            android:text="@string/btn_used_libs"
            android:textColor="@color/accent_900" />

        <Button
            android:id="@+id/btn_privacy"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn_accent"
            android:onClick="open_privacy"
            android:text="@string/btn_privacy"
            android:textColor="@color/window_background" />

    </LinearLayout>

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/desc_app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textColor="@color/button"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_icon" />

    <TextView
        android:id="@+id/app_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/text_app_desc"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />

    <TextView
        android:id="@+id/app_dev"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/text_app_dev"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_desc" />

    <TextView
        android:id="@+id/app_version"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/text_version"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_dev" />

    <Button
        android:id="@+id/btn_tos"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_weight="1"
        android:background="@drawable/btn_accent"
        android:onClick="open_tos"
        android:text="@string/btn_tos"
        android:textColor="@color/window_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_buttons_group" />

</androidx.constraintlayout.widget.ConstraintLayout>