<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/app_name"
        android:textColor="@color/text_title"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/colors_fields_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/color_picker">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/field_r"
            android:textColor="#FF0000"
            android:textColorHint="#66FF0000"
            app:boxStrokeColor="@color/red"
            app:boxStrokeErrorColor="@color/error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/field_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button"
                android:inputType="numberSigned"
                android:textColor="#FF0000"
                android:textColorHighlight="#33FF0000"
                app:backgroundTint="@color/button" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/field_g"
            android:textColor="#00FF00"
            android:textColorHint="#6600FF00"
            app:boxStrokeColor="@color/green"
            app:boxStrokeErrorColor="@color/error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/field_green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button"
                android:inputType="numberSigned"
                android:textColor="#00FF00"
                android:textColorHighlight="#3300FF00"
                app:backgroundTint="@color/button" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/field_b"
            android:textColor="#0000FF"
            android:textColorHint="#660000FF"
            app:boxStrokeColor="@color/blue"
            app:boxStrokeErrorColor="@color/error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/field_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button"
                android:inputType="numberSigned"
                android:textColor="#0000FF"
                android:textColorHighlight="#330000FF"
                app:backgroundTint="@color/button" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <top.defaults.colorpicker.ColorPickerView
        android:id="@+id/color_picker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="48dp"
        android:onClick="unfocus"
        app:enableAlpha="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_title" />

                <LinearLayout
                    android:id="@+id/action_buttons_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    android:weightSum="2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/animation">

                    <Button
                        android:id="@+id/btn_pick_color"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_accent_outline"
                        android:onClick="reset"
                        android:text="@string/btn_reset"
                        android:textColor="@color/accent_900" />

                    <Button
                        android:id="@+id/btn_set"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_accent"
                        android:onClick="run"
                        android:text="@string/btn_set"
                        android:textColor="@color/window_background" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/animation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:buttonTint="@color/accent_900"
                    android:text="@string/checkbox_animation"
                    android:textColor="@color/accent_900"
                    app:buttonTint="@color/accent_900"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/colors_fields_group" />

                <TextView
                    android:id="@+id/debug"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_debug"
                    android:textColor="#FF8400"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/loading_screen"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.5"
        android:background="@color/window_background"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/loading_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/disabler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.5"
        android:background="@color/window_background"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:clickable="true"
        android:contentDescription="@string/desc_power"
        android:onClick="toggle"
        android:src="@drawable/ic_power"
        app:backgroundTint="@color/light_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>