<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/text_add_device"
        android:textColor="@color/text_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/name_fields_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/text_device_name"
            android:textColor="@color/accent_900"
            android:textColorHint="@color/accent_500"
            app:boxStrokeColor="@color/button"
            app:boxStrokeErrorColor="@color/error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/field_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:backgroundTint="@color/button"
                android:textColor="@color/accent_900"
                android:textColorHighlight="@color/accent_100"
                android:textColorHint="@color/accent_500"
                app:backgroundTint="@color/button" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/host_fields_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_fields_group">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/field_protocol"
            android:textColor="@color/accent_900"
            android:textColorHint="@color/accent_500"
            app:boxStrokeColor="@color/button"
            app:boxStrokeErrorColor="@color/error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/field_protocol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button"
                android:inputType="text"
                android:textColor="@color/accent_900"
                android:textColorHighlight="@color/accent_100"
                android:textColorHint="@color/accent_500"
                app:backgroundTint="@color/button" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/field_hostname"
            android:textColor="@color/accent_900"
            android:textColorHint="@color/accent_500"
            app:boxStrokeColor="@color/button"
            app:boxStrokeErrorColor="@color/error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/field_hostname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button"
                android:inputType="text"
                android:textColor="@color/accent_900"
                android:textColorHighlight="@color/accent_100"
                android:textColorHint="@color/accent_500"
                app:backgroundTint="@color/button" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/field_port"
            android:textColor="@color/accent_900"
            android:textColorHint="@color/accent_500"
            app:boxStrokeColor="@color/button"
            app:boxStrokeErrorColor="@color/error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/field_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button"
                android:inputType="numberSigned"
                android:textColor="@color/accent_900"
                android:textColorHighlight="@color/accent_100"
                android:textColorHint="@color/accent_500"
                app:backgroundTint="@color/button" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_fields_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/host_fields_group">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/field_command_line"
            android:textColor="@color/accent_900"
            android:textColorHint="@color/accent_500"
            app:boxStrokeColor="@color/button"
            app:boxStrokeErrorColor="@color/error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/field_cmd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button"
                android:drawableEnd="@drawable/ic_help"
                android:inputType="text"
                android:textColor="@color/accent_900"
                android:textColorHighlight="@color/accent_100"
                android:textColorHint="@color/accent_500"
                app:backgroundTint="@color/button" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/getter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_fields_group">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Sync provider address"
            android:textColor="@color/accent_900"
            android:textColorHint="@color/accent_500"
            app:boxStrokeColor="@color/button"
            app:boxStrokeErrorColor="@color/error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/field_getter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button"
                android:inputType="text"
                android:textColor="@color/accent_900"
                android:textColorHighlight="@color/accent_100"
                android:textColorHint="@color/accent_500"
                app:backgroundTint="@color/button" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>